--- a/scss/others/opacity.scss
+++ b/scss/others/opacity.scss
@@ -1,10 +1,7 @@
 @import '../variable';
 
-$max: ($opacity-max - $opacity-min) / $opacity-step;
-$min: $opacity-min;
-$step: $opacity-step;
+$max: 1 / $opacity-step;
 
 @for $i from 0 through $max{
-  $num: $min + $i * $step;
-  .o-#{$num}{opacity: $num / 10;}
+  .o-#{$i}{opacity: $i * $opacity-step;}
 }
