--- a/scss/border/border-media.scss
+++ b/scss/border/border-media.scss
@@ -10,26 +10,23 @@
     .#{$key}\:bb{border-bottom-width: 1px;}
     .#{$key}\:bl{border-left-width: 1px;}
 
+    $unit: $border-width-unit;
 
-    $max: ($border-width-max - $border-width-min) / $border-width-step;
-    $min: $border-width-min;
-    $step: $border-width-step;
-
-    @for $i from 0 through $max{
-      $num: $min + $i * $step;
-      .#{$key}\:bd-#{$num}{border-width: #{$num}px;}
+    @for $i from 0 through $border-width-max{
+      $num: $i * $border-width-step;
+      .#{$key}\:bd-#{$num}{border-width: #{$num}#{$unit};}
     }
-    @for $i from 0 through $max{
-      $num: $min + $i * $step;
-      .#{$key}\:bx-#{$num}{border-left-width: #{$num}px;border-right-width: #{$num}px;}
-      .#{$key}\:by-#{$num}{border-top-width: #{$num}px;border-bottom-width: #{$num}px;}
+    @for $i from 0 through $border-width-max{
+      $num: $i * $border-width-step;
+      .#{$key}\:bx-#{$num}{border-left-width: #{$num}#{$unit};border-right-width: #{$num}#{$unit};}
+      .#{$key}\:by-#{$num}{border-top-width: #{$num}#{$unit};border-bottom-width: #{$num}#{$unit};}
     }
-    @for $i from 0 through $max{
-      $num: $min + $i * $step;
-      .#{$key}\:bt-#{$num}{border-top-width: #{$num}px;}
-      .#{$key}\:br-#{$num}{border-right-width: #{$num}px;}
-      .#{$key}\:bb-#{$num}{border-bottom-width: #{$num}px;}
-      .#{$key}\:bl-#{$num}{border-left-width: #{$num}px;}
+    @for $i from 0 through $border-width-max{
+      $num: $i * $border-width-step;
+      .#{$key}\:bt-#{$num}{border-top-width: #{$num}#{$unit};}
+      .#{$key}\:br-#{$num}{border-right-width: #{$num}#{$unit};}
+      .#{$key}\:bb-#{$num}{border-bottom-width: #{$num}#{$unit};}
+      .#{$key}\:bl-#{$num}{border-left-width: #{$num}#{$unit};}
     }
 
     .#{$key}\:bd-dash{border-style: dashed;}
