--- a/scss/border/light-status.scss
+++ b/scss/border/light-status.scss
@@ -1,13 +1,16 @@
 @import '../variable';
+$max: 1 / $border-color-step;
+$step: $border-color-step;
 
-@each $n in $border-color-value {
-  .h\:bc-#{$n}:hover{border-color: transparentize($border-color, 1 - $n / 10)}
+@for $i from 0 through $max{
+  $num: $i * $step;
+  .h\:bc-#{$i}:hover{border-color: transparentize($border-light, 1 - $num)}
 }
-
-@each $n in $border-color-value {
-  .f\:bc-#{$n}:focus{border-color: transparentize($border-color, 1 - $n / 10)}
+@for $i from 0 through $max{
+  $num: $i * $step;
+  .f\:bc-#{$i}:focus{border-color: transparentize($border-light, 1 - $num)}
 }
-
-@each $n in $border-color-value {
-  .a\:bc-#{$n}:active{border-color: transparentize($border-color, 1 - $n / 10)}
+@for $i from 0 through $max{
+  $num: $i * $step;
+  .a\:bc-#{$i}:active{border-color: transparentize($border-light, 1 - $num)}
 }
