--- a/scss/margin-padding/margin-padding-media.scss
+++ b/scss/margin-padding/margin-padding-media.scss
@@ -1,5 +1,9 @@
 @import '../variable';
 
+$step: $margin-padding-step;
+$unit: $margin-padding-unit;
+$max: $margin-padding-max / $step;
+
 @each $key, $val in $media-query{
   @media screen and (max-width: #{$val}px) {
     
@@ -12,41 +16,41 @@
     .#{$key}\:ml-a{margin-left: auto;}
 
 
-    @for $i from 0 through $margin-padding-max {
+    @for $i from 0 through $max {
       $num: $i * $margin-padding-step;
-      .#{$key}\:m-#{$i}{margin: #{$num}em}
+      .#{$key}\:m-#{$i}{margin: #{$num}#{$unit}}
     }
-    @for $i from 0 through $margin-padding-max {
+    @for $i from 0 through $max {
       $num: $i * $margin-padding-step;
-      .#{$key}\:mx-#{$i}{margin-left: #{$num}em;margin-right: #{$num}em;}
-      .#{$key}\:my-#{$i}{margin-top: #{$num}em;margin-bottom: #{$num}em}
+      .#{$key}\:mx-#{$i}{margin-left: #{$num}#{$unit};margin-right: #{$num}#{$unit};}
+      .#{$key}\:my-#{$i}{margin-top: #{$num}#{$unit};margin-bottom: #{$num}#{$unit}}
     }
-    @for $i from 0 through $margin-padding-max {
+    @for $i from 0 through $max {
       $num: $i * $margin-padding-step;
-      .#{$key}\:mt-#{$i}{margin-top: #{$num}em}
-      .#{$key}\:mr-#{$i}{margin-right: #{$num}em}
-      .#{$key}\:mb-#{$i}{margin-bottom: #{$num}em}
-      .#{$key}\:ml-#{$i}{margin-left: #{$num}em}
+      .#{$key}\:mt-#{$i}{margin-top: #{$num}#{$unit}}
+      .#{$key}\:mr-#{$i}{margin-right: #{$num}#{$unit}}
+      .#{$key}\:mb-#{$i}{margin-bottom: #{$num}#{$unit}}
+      .#{$key}\:ml-#{$i}{margin-left: #{$num}#{$unit}}
     }
 
 
     
 
-    @for $i from 0 through $margin-padding-max {
+    @for $i from 0 through $max {
       $num: $i * $margin-padding-step;
-      .#{$key}\:p-#{$i}{padding: #{$num}em}
+      .#{$key}\:p-#{$i}{padding: #{$num}#{$unit}}
     }
-    @for $i from 0 through $margin-padding-max {
+    @for $i from 0 through $max {
       $num: $i * $margin-padding-step;
-      .#{$key}\:px-#{$i}{padding-left: #{$num}em;padding-right: #{$num}em;}
-      .#{$key}\:py-#{$i}{padding-top: #{$num}em;padding-bottom: #{$num}em}
+      .#{$key}\:px-#{$i}{padding-left: #{$num}#{$unit};padding-right: #{$num}#{$unit};}
+      .#{$key}\:py-#{$i}{padding-top: #{$num}#{$unit};padding-bottom: #{$num}#{$unit}}
     }
-    @for $i from 0 through $margin-padding-max {
+    @for $i from 0 through $max {
       $num: $i * $margin-padding-step;
-      .#{$key}\:pt-#{$i}{padding-top: #{$num}em}
-      .#{$key}\:pr-#{$i}{padding-right: #{$num}em}
-      .#{$key}\:pb-#{$i}{padding-bottom: #{$num}em}
-      .#{$key}\:pl-#{$i}{padding-left: #{$num}em}
+      .#{$key}\:pt-#{$i}{padding-top: #{$num}#{$unit}}
+      .#{$key}\:pr-#{$i}{padding-right: #{$num}#{$unit}}
+      .#{$key}\:pb-#{$i}{padding-bottom: #{$num}#{$unit}}
+      .#{$key}\:pl-#{$i}{padding-left: #{$num}#{$unit}}
     }
   }
 }
