--- a/scss/others/transition.scss
+++ b/scss/others/transition.scss
@@ -11,15 +11,14 @@ $trans: (
 
 .trans{transition: all .3s;}
 @each $key, $val in $trans{
-  .trans-#{$key}{transition-property: $val;}
+  .trans-#{$key}{transition-property: $val;transition-duration: 200ms;}
 }
 
 
-$max: ($during-max - $during-min) / $during-step;
-$min: $during-min;
+$max: $during-max / $during-step;
 $step: $during-step;
 
 @for $i from 0 through $max{
-  $num: $min + $i * $step;
-  .dur-#{$num}{transition-duration: #{$num}ms;}
+  $num: $i * $step;
+  .dur-#{$num}{transition-duration: #{$num}#{$during-unit};}
 }
