--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -1,83 +1,103 @@
-$width-height-min: 0;
 $width-height-max: 20;
 $width-height-step: 0.2;
+$width-height-unit: em;
+
+
+$position-max: 100;
+$position-step: 1;
+$position-unit: px;
+
 
 $font-size-min: 0;
-$font-size-max: 3;
+$font-size-max: 4;
 $font-size-step: 0.1;
+$font-size-unit: rem;
+
 
 $line-height-min: 1;
-$line-height-max: 2;
+$line-height-max: 4;
 $line-height-step: 0.1;
+$line-height-unit: em;
 
-$opacity-min: 0;
-$opacity-max: 10;
-$opacity-step: 1;
 
-$z-index-min: 0;
-$z-index-max: 10;
+$opacity-step: 0.01;
+
+
+$z-index-max: 100;
 $z-index-step: 1;
 
-$border-width-min: 0;
+
 $border-width-max: 20;
 $border-width-step: 1;
+$border-width-unit: px;
 
-$rounded-max: 20;
-$rounded-step: 0.1;
 
-$margin-padding-max: 20;
-$margin-padding-step: 0.2;
+$radius-max: 20;
+$radius-step: 0.1;
+$radius-unit: em;
 
-$flex-min: 0;
-$flex-max: 10;
+// margin padding em
+$margin-padding-max: 5;
+$margin-padding-step: 0.1;
+$margin-padding-unit: em;
+
+
+$flex-max: 20;
 $flex-step: 1;
 
 // grid
-$grid-max: 12;
+$grid-max: 20;
 $grid-step: 1;
-$grid-gap-max: 20;
-$grid-gap-step: 0.2;
+$grid-gap-max: 5;
+$grid-gap-step: 0.1;
+$grid-gap-unit: em;
 
 // transition
-$during-min: 0;
 $during-max: 1000;
 $during-step: 100;
+$during-unit: ms;
 
 // 颜色相关
-$text-color: #000;         // 文字颜色
-$text-color-dark: #fff;    // 深色模式下文字颜色
-$text-color-value: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
+$text-light: #000000;         // 文字颜色
+$text-dark: #ffffff;    // 深色模式下文字颜色
+$text-color-step: 0.01;
 
-$bg-light: #fff;           // 亮色模式下的基础背景色（一般用在body上）
-$bg-dark: #0d1117;            // 暗色模式下的基础背景色（一般用在body上）
-$bg-color: #13161b;           // 背景颜色
-$bg-color-dark: #fff;      // 深色模式下背景颜色
-$bg-color-value: 1, 2, 3, 4, 5;    // 背景的透明度为：实际数值 / 25
+// 基础背景色
+$bg-base-light: #ffffff;
+$bg-base-dark: #0d1117;
 
-$border-color: #13161b;       // 边框颜色
-$border-color-dark: #fff;  // 深色模式下边框颜色
-$border-color-value: 1, 2, 3, 4, 5, 0;
+// 叠加背景色
+$bg-light: #13161b;           // 背景颜色
+$bg-dark: #ffffff;      // 深色模式下背景颜色
+$bg-color-step: 0.01;
+
+
+$border-light: #13161b;       // 边框颜色
+$border-dark: #ffffff;  // 深色模式下边框颜色
+$border-color-step: 0.01;
 
 // 此处的颜色并不会受黑色模式的影响
+$color-step: 0.01;
 $colors: (
-  white: #fff,
+  white: #ffffff,
   gray: #8d8d8d,
-  black: #000,
-
+  black: #000000,
   blue: #1a6df1,
+  cyan: #19bedb,
   green: #10ba75,
-  yellow: #f59e0b,
+  yellow: #e9ae0a,
+  orange: #e98513,
   red: #ef4444,
+  pink: #e72690,
+  purple: #ab44ef,
 );
-$colors-value: 1, 2, 3, 4, 5, 6, 7, 8, 9;
 
-// media query
+
 $media-query: (
-  // xl: 9999,
-  lg: 1920,
-  md: 1366,
-  sm: 1000,
-  xs: 768,
-  xxs: 600
+  xl: 1920,
+  lg: 1366,
+  md: 992,
+  sm: 768,
+  xs: 576
 );
 
