--- a/scss/width-height/width-height.scss
+++ b/scss/width-height/width-height.scss
@@ -1,6 +1,38 @@
 @import '../variable';
-// @for $i from 0 through $width-height-max {
-//   $num: $i * $width-height-step;
-//   .w-#{$num}{width: #{$num}em}
-//   .h-#{$num}{height: #{$num}em}
-// }
+
+.w-full{width: 100%;}
+.h-full{height: 100%;}
+.w-half{width: 50%;}
+.h-half{width: 50%;}
+
+.maxw-full{max-width: 100%;}
+.maxh-full{max-height: 100%;}
+.maxw-half{max-width: 50%;}
+.maxh-half{max-width: 50%;}
+
+.minw-full{min-width: 100%;}
+.minh-full{min-height: 100%;}
+.minw-half{min-width: 50%;}
+.minh-half{min-width: 50%;}
+
+$unit: $width-height-unit;
+
+@for $i from 0 through 99 {
+  $num: 100% * $i / 100;
+  .w-#{$i}\%{width: #{$num}}
+  .h-#{$i}\%{height: #{$num}}
+  .maxw-#{$i}\%{max-width: #{$num}}
+  .maxh-#{$i}\%{max-height: #{$num}}
+  .minw-#{$i}\%{min-width: #{$num}}
+  .minh-#{$i}\%{min-height: #{$num}}
+}
+
+@for $i from 0 through $width-height-max {
+  $num: $i * $width-height-step;
+  .w-#{$i}{width: #{$num}#{$unit}}
+  .h-#{$i}{height: #{$num}#{$unit}}
+  .maxw-#{$i}{max-width: #{$num}#{$unit}}
+  .maxh-#{$i}{max-height: #{$num}#{$unit}}
+  .minw-#{$i}{min-width: #{$num}#{$unit}}
+  .minh-#{$i}{min-height: #{$num}#{$unit}}
+}
