--- a/scss/background/dark.scss
+++ b/scss/background/dark.scss
@@ -1,11 +1,18 @@
 @import '../variable';
 
+.bg{background-color: $bg-base-dark;}
+
 $max: 1 / $bg-color-step;
 $step: $bg-color-step;
-
-.bg{background-color: $bg-base-dark;}
 
 @for $i from 0 through $max{
   $num: $i * $step;
   .bg-#{$i}{background-color: transparentize($bg-dark, 1 - $num)}
+}
+
+@each $s, $str in $status {
+  @for $i from 0 through $max{
+    $num: $i * $step;
+    .#{$s}\:bg-#{$i}:#{$str}{background-color: transparentize($bg-dark, 1 - $num)}
+  }
 }
